--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ on: push
 jobs:
   release:
     runs-on: ubuntu-18.04
+    env:
+      IMAGE: docker.pkg.github.com/caos/semantic-release/semantic-release
     steps:
     - name: Source checkout
       uses: actions/checkout@v1
@@ -10,12 +12,7 @@ jobs:
         fetch-depth: 1
     - name: Build
       shell: bash
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        export IMAGE=docker.pkg.github.com/caos/semantic-release/semantic-release
-        export TAG_LATEST=${IMAGE}:latest
-        docker build --tag ${TAG_LATEST} --file ./Dockerfile .
+      run: docker build --tag ${IMAGE}:latest --file ./Dockerfile .
     - uses: anchore/scan-action@master
       with:
         image-reference: "docker.pkg.github.com/caos/semantic-release/semantic-release:latest"
