--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,7 @@ name: Build
 on:
   push:
     branches:
-      - 'dev/*'
-      - 'master'
+      - '*'
 jobs:
   release:
     runs-on: ubuntu-18.04
@@ -14,11 +13,9 @@ jobs:
     - name: Checkout Source
       uses: actions/checkout@v1
     - name: Docker Build
-      run: docker build . --file Dockerfile --tag $REGISTRY/$GITHUB_REPOSITORY/$ARTIFACT:$GITHUB_REF
+      run: docker build . --tag $REGISTRY/$GITHUB_REPOSITORY/$ARTIFACT:$GITHUB_REF
     - name: Docker Push
+      if: github.ref == master
       run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$GITHUB_REF
-    - name: Check Version
-      shell: bash
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: npx semantic-release
+    #- name: Check Version
+    #  run: npx semantic-release
