--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,12 @@ jobs:
     steps: 
     - name: Checkout Source
       uses: actions/checkout@v1
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=BRANCH;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Docker Build
-      run: docker build . --tag $REGISTRY/$GITHUB_REPOSITORY/$ARTIFACT:$GITHUB_REF
+      run: docker build . --tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$BRANCH
     - name: Docker Push
       if: github.ref == 'master'
       run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$GITHUB_REF
