--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,16 @@ jobs:
     - name: Docker Build
       run: docker build . --tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
     - name: Docker Push
-      if: github.ref == 'master'
-      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$GITHUB_REF
-    #- name: Check Version
-    #  run: npx semantic-release
+      if: github.ref == 'refs/heads/master'
+      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
+    - name: Check Version
+      run: echo "::set-env name=APP_NAME::v$(npx semantic-release| grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
+      #if: github.ref == 'refs/heads/master'
+    - name: Docker Tag & Push Release
+      run: docker tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION && \
+           docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
+      if: github.ref == 'refs/heads/master'
+    - name: Docker Tag latest
+      run: docker tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest && \
+          docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
+      if: github.ref == 'refs/heads/master'
