--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,17 +14,16 @@ jobs:
       uses: actions/checkout@v1
     - name: Docker Build
       run: docker build . --tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
-    - name: Docker Push
-      if: github.ref == 'refs/heads/master'
-      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
     - name: Check Version
-      run: echo "::set-env name=APP_NAME::v$(npx semantic-release| grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
-      #if: github.ref == 'refs/heads/master'
+      run: echo "::set-env name=VERSION::v$(npx semantic-release | grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
+    - name: Docker Push Branch
+      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
+      if: github.ref == 'refs/heads/master'
     - name: Docker Tag & Push Release
       run: docker tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION && \
            docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
       if: github.ref == 'refs/heads/master'
-    - name: Docker Tag latest
+    - name: Docker Tag & Push latest
       run: docker tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest && \
           docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
       if: github.ref == 'refs/heads/master'
