--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,36 +1,13 @@
-name: Build
+name: Test
 on:
   push:
     branches:
-      - '*'
+      - '!master'
 jobs:
-  release:
+  Build:
     runs-on: ubuntu-18.04
-    env:
-      REGISTRY: docker.pkg.github.com
-      IMAGE: semantic-release
     steps: 
     - name: Checkout Source
       uses: actions/checkout@v1
     - name: Docker Build
       run: docker build . --tag localbuild/image:latest
-    - name: Docker Tag & Push Branch
-      run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} && \
-           docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
-      if: github.ref == 'refs/heads/master'
-    - name: Scan image
-      uses: anchore/scan-action@master
-      with:
-        image-reference: "localbuild/image:latest"
-        fail-build: true
-      if: github.ref == 'refs/heads/refactor-ci'
-    - name: Check Version
-      run: echo "::set-env name=VERSION::v$(npx semantic-release | grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
-    - name: Docker Tag & Push Release
-      run: docker tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION && \
-           docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
-      if: github.ref == 'refs/heads/master'
-    - name: Docker Tag & Push latest
-      run: docker tag $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/} $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest && \
-          docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
-      if: github.ref == 'refs/heads/master'
