--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Test
 on:
   push:
-    branches:
-      - '!master'
+    branches-ignore:
+      - 'master'
 jobs:
   Build:
     runs-on: ubuntu-18.04
