--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     env:
       REGISTRY: docker.pkg.github.com
       IMAGE: semantic-release
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps: 
     - name: Checkout Source
       uses: actions/checkout@v1
@@ -21,6 +22,8 @@ jobs:
     #    fail-build: true
     - name: Check Version
       run: echo "::set-env name=VERSION::v$(npx semantic-release | grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
+    - name: Docker Login 
+      run: docker login docker.pkg.github.com -u ci -p ${GITHUB_TOKEN}
     - name: Docker Tag Branch
       run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
     - name: Docker Push Branch
@@ -31,3 +34,4 @@ jobs:
     - name: Docker Tag & Push latest
       run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest && \
            docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
+
