--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,19 +16,21 @@ jobs:
     - name: Docker Build
       run: docker build . --tag localbuild/image:latest
     - name: Check Version
-      run: echo "::set-env name=VERSION::v$(npx semantic-release | grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
-    - name: Docker Login 
-      run: docker login docker.pkg.github.com -u ci -p ${GITHUB_TOKEN}
-    - name: Docker Tag Branch
-      run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
-    - name: Docker Push Branch
-      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
-    - name: Docker Tag Release
-      run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
-    - name: Docker Push Release
-      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
-    - name: Docker Tag Latest
-      run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
-    - name: Docker Push Latest
-      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
+      run: export VERSION="v$(npx semantic-release | grep "The next release version is" | sed -ne 's/.*The\ next\ release\ version\ is\ \([0-9]\+\.[0-9]\+\.[0-9]\+\)$/\1/p')"
+    - name: Echo Version
+      run: echo $VERSION
+      # - name: Docker Login 
+    #   run: docker login docker.pkg.github.com -u ci -p ${GITHUB_TOKEN}
+    # - name: Docker Tag Branch
+    #   run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
+    # - name: Docker Push Branch
+    #   run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF##*/}
+    # - name: Docker Tag Release
+    #   run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
+    # - name: Docker Push Release
+    #   run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:$VERSION
+    # - name: Docker Tag Latest
+    #   run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
+    # - name: Docker Push Latest
+    #   run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
 
