--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Release
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - v*.*.*
 jobs:
   Build:
     runs-on: ubuntu-18.04
