--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,11 @@ jobs:
       uses: actions/checkout@v1
     - name: Docker Build
       run: docker build . --tag localbuild/image:latest
-    - name: Check Version
-      run: |
-        npm install -g @semantic-release/exec
-        npx semantic-release --dry-run
+    - name: Semantic Release
+      id: semantic
+      uses: cycjimmy/semantic-release-action@v2
     - name: Echo
-      run: echo $VERSION
+      run: echo ${{ steps.semantic.outputs.new_release_version }}
     # - name: Docker Login 
     #   run: docker login $REGISTRY -u ${GITHUB_ACTOR} -p ${GITHUB_TOKEN}
     # - name: Docker Tag Release
