fix: Release step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,13 @@ jobs:
     - name: Semantic Release
       id: semantic
       uses: cycjimmy/semantic-release-action@v2
-    - name: Echo
-      run: echo ${{ steps.semantic.outputs.new_release_version }}
-    # - name: Docker Login 
-    #   run: docker login $REGISTRY -u ${GITHUB_ACTOR} -p ${GITHUB_TOKEN}
-    # - name: Docker Tag Release
-    #   run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF#refs/tags/}
-    # - name: Docker Push Release
-    #   run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:${GITHUB_REF#refs/tags/}
-    # - name: Docker Tag Latest
-    #   run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
-    # - name: Docker Push Latest
-    #   run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
+    - name: Docker Login 
+      run: docker login $REGISTRY -u ${GITHUB_ACTOR} -p ${GITHUB_TOKEN}
+    - name: Docker Tag Release
+      run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:v${{ steps.semantic.outputs.new_release_version }}
+    - name: Docker Push Release
+      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:v${{ steps.semantic.outputs.new_release_version }}
+    - name: Docker Tag Latest
+      run: docker tag localbuild/image:latest $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
+    - name: Docker Push Latest
+      run: docker push $REGISTRY/$GITHUB_REPOSITORY/$IMAGE:latest
