fix: try releaserc exec in GH_Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
     - name: Semantic Release
       id: semantic
       uses: cycjimmy/semantic-release-action@v2
+    - name: Echo next version
+      run: echo CAOS_NEXT_VERSION
     - name: Docker Login 
       run: docker login $REGISTRY -u ${GITHUB_ACTOR} -p ${GITHUB_TOKEN}
     - name: Docker Tag Release
