fix: add extra plugin

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Semantic Release
       id: semantic
       uses: cycjimmy/semantic-release-action@v2
+      with:
+        extra_plugins: |
+          @semantic-release/exec
     - name: Echo next version
       run: echo CAOS_NEXT_VERSION
     - name: Docker Login 
